     Use this function only when the device can handle patch changes quickly!

   o added CV_GATE_SR1 and CLK_SR to MBSEQ_HW.V4 config
     This is the prefered option to add CV gates and DIN clock/start signals to your MIDIbox SEQ in future.
     See also updated http://www.ucapps.de/midibox_seq_manual_hw.html

   o STM32F4: support for bootloader "enforce_usb_device" flag


MIDIboxSEQ V4.086
~~~~~~~~~~~~~~~~~

   o various improvements for external BLMs with different dimensions
     (previously only BLM16x16+X was properly supported)

   o corrected behaviour of ALL button in EDIT page (GP buttons change
     selection pattern with GP buttons)


MIDIboxSEQ V4.086
~~~~~~~~~~~~~~~~~

   o MIDI Learn for Drum notes in Track Event configuration page:
     on a drum track, press & hold button GP12 to set the drum note
     depending on the configured recording port & channel (which has to be
     configured in the RECORD page)

   o Edit page: press&hold a GP button to record directly into the selected step

   o Edit page: config page which was previously visible by pressing the SELECT
     button now displayed by pressing&holding EDIT button.
     SELECT button now toggles step recording mode

   o Edit page: added shortcut to Recording Config (EDIT+GP11/GP12)

   o Record page now allows to toggle the FTS and FX flag for MIDI Forwarding
     (same flags can be configured in LIVE page)

   o Step Recording: note length measurements now also working correctly when
     the sequencer is clocked in slave mode.

   o Track Event configuration page: VelN/VelA not displayed if they are
     not relevant for the selected configuration.

   o Clear function will clear all selected tracks

   o LFO page: Extra CC can now be disabled/enable with a separate switch

   o Echo page: echo can now be enabled/disabled without touching the repeat value


MIDIboxSEQ V4.085
~~~~~~~~~~~~~~~~~

   o it's now possible to customize the MENU short cut page in MBSEQ_HW.V4