@@ -333,7 +333,7 @@ TPD_ROWS_SR_RED_R 6
 # AOUT interface now selected in CV Configuration Menu and stored in MBSEQ_CV.V4 file
 # please scroll through the menu to find this page!
 
-# the 8 CV gates can be assigned to a shift register (0=off, 1-16: number of shift register):
+# the 8 CV gates can be assigned to a shift register (0=off, 1-32: number of shift register):
 # - 1st CV Gate available at DOUT SR output D7
 # - 2nd CV Gate available at DOUT SR output D6
 # - 3rd CV Gate available at DOUT SR output D5
@@ -341,15 +341,15 @@ TPD_ROWS_SR_RED_R 6
 # - 8th CV Gate available at DOUT SR output D0
 CV_GATE_SR1   0
 
-# and DIN Clock Outputs can be assigned to a shift register as well (0=off, 1-16: number of shift register):
-# D7..D5 will output a clock signal and D3..D0 a start/stop signal
+# and DIN Clock Outputs can be assigned to a shift register as well (0=off, 1-32: number of shift register):
+# D7..D0 will output individual clock or start/stop signals which can be configured in the CV configuration page
 CLK_SR        0
 
 # additional gate triggers are available on common digital output pins of the
 # DOUT shift register chain - they are assigned to AOUT channel #16 (Note C-1, C#1, D-1, ...)
 # define the shift registers which should be used here (each provides 8 gates)
 # Note that SRs assigned to this function cannot be used as LED outputs (exclusive function)
-# Allowed values: 1-16, 0 disables the function, all other values invalid and not allowed
+# Allowed values: 1-32, 0 disables the function, all other values invalid and not allowed
 DOUT_GATE_SR1   0
 DOUT_GATE_SR2   0
 DOUT_GATE_SR3   0
@@ -359,7 +359,7 @@ DOUT_GATE_SR6   0
 DOUT_GATE_SR7   0
 DOUT_GATE_SR8   0
 
-# if set to 1, the DOUT "gates" will send 1mS pulses
+# if set to 1, the additional DOUT "gates" will send 1mS pulses
 # useful for analog drums
 DOUT_1MS_TRIGGER 0
 
